update appveyor.yml 4

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,10 +31,9 @@ configuration:
 
 before_build:
   - set CTEST_OUTPUT_ON_FAILURE=1
-  - sh: sudo apt-get update
-  - sh: sudo apt-get --yes install zlib1g-dev
-  - sh: sudo apt-get --yes install libbz2-dev
-  - sh: sudo apt-get --yes install liblzma-dev
+  - choco install zlib
+  - choco install bz2
+  - choco install lzma
   - cmake.exe -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
 
 build_script:
