--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,7 @@ skip_commits:
   files:
     - '*.md'
     - '.gitignore'
+    - '.travis.yml'
 matrix:
   fast_finish: true
 environment:
@@ -13,24 +14,29 @@ environment:
       BUILDER: CMake
       GENERATOR: "Visual Studio 15 2017"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      tbs_tools: "msvc15"
     - PLATFORM: x64
       BUILDER: CMake
       GENERATOR: "Visual Studio 15 2017 Win64"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      tbs_tools: "msvc15"
     - PLATFORM: x86
       BUILDER: CMake
       GENERATOR: "Visual Studio 14 2015"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      tbs_tools: "msvc14"
     - PLATFORM: x64
       BUILDER: CMake
       GENERATOR: "Visual Studio 14 2015 Win64"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      tbs_tools: "msvc14"
 configuration:
   - Debug
   - Release
 
 before_build:
   - set CTEST_OUTPUT_ON_FAILURE=1
+  - nuget install zlib-%tbs_tools%-%PLATFORM%-master -Source https://ci.appveyor.com/nuget/zlib-94hmpf3q011d
   - choco install xdelta3
   - cmake.exe -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
 
