update appveyor.yml 13

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,8 +34,8 @@ before_build:
   - set CTEST_OUTPUT_ON_FAILURE=1
   - if "%PLATFORM%"=="x86" nuget install zlib-msvc14-x86 -Version 1.2.11.7795
   - if "%PLATFORM%"=="x64" nuget install zlib-msvc14-x64 -Version 1.2.11.7795
-  - nuget restore comp_decomp
   - cmake.exe -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
+  - nuget restore comp_decomp.sln
 
 build_script:
   - cmake --build . --config %CONFIGURATION%
