--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ before_build:
   - set ZLIB_VER_DOT=1.2.8
   - ps: >-
     appveyor DownloadFile "https://github.com/madler/zlib/archive/v${env:ZLIB_VER_DOT}.zip" -FileName "zlib.zip"
-    7z x zlib.zip -oC:\
+    7z x zlib.zip -o"c:\"
     Rename-Item -path "c:\zlib-${env:ZLIB_VER_DOT}" -newName "zlib"
   - ps: >-
     cd C:\zlib
