--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,10 +35,10 @@ before_build:
   - set ZLIB_VER_DOT=1.2.8
   - ps: >-
     appveyor DownloadFile "https://github.com/madler/zlib/archive/v${env:ZLIB_VER_DOT}.zip" -FileName "zlib.zip"
-    7z x zlib.zip -o"c:\"
-    Rename-Item -path "c:\zlib-${env:ZLIB_VER_DOT}" -newName "zlib"
+    7z x zlib.zip
+    Rename-Item -path "zlib-${env:ZLIB_VER_DOT}" -newName "zlib"
   - ps: >-
-    cd C:\zlib
+    cd zlib
     (Get-Content win32/Makefile.msc).replace('-MD', '-MT') | Set-Content win32/Makefile.msc
     If ($env:Platform -Match "x86") {
        nmake -f win32/Makefile.msc LOC="-DASMV -DASMINF" OBJA="inffas32.obj match686.obj" zlib.lib
@@ -46,8 +46,8 @@ before_build:
        nmake -f win32/Makefile.msc AS=ml64 LOC="-DASMV -DASMINF -I." OBJA="inffasx64.obj gvmat64.obj inffas8664.obj" zlib.lib
     }
     $env:NMAKE_EXTRA="ZLIBSTATIC_DEF=/DENABLE_ZLIB_STATIC ${env:NMAKE_EXTRA}"
+  - cd ..
   - cmake.exe -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
-  - nuget restore comp_decomp.sln
 
 build_script:
   - cmake --build . --config %CONFIGURATION%
