--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,13 +38,8 @@ before_build:
   - ps: Rename-Item -path "zlib-${env:ZLIB_VER_DOT}" -newName "zlib"
   - cd zlib
   - ps: (Get-Content win32/Makefile.msc).replace('-MD', '-MT') | Set-Content win32/Makefile.msc
-  - ps: >-
-    If ($env:Platform -Match "x86") {
-       nmake -f win32/Makefile.msc LOC="-DASMV -DASMINF" OBJA="inffas32.obj match686.obj" zlib.lib
-    } Else {
-       nmake -f win32/Makefile.msc AS=ml64 LOC="-DASMV -DASMINF -I." OBJA="inffasx64.obj gvmat64.obj inffas8664.obj" zlib.lib
-    }
-    $env:NMAKE_EXTRA="ZLIBSTATIC_DEF=/DENABLE_ZLIB_STATIC ${env:NMAKE_EXTRA}"
+  - nmake -f win32/Makefile.msc zlib.lib
+  - copy zlib.lib ..
   - cd ..
   - cmake.exe -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
 
