--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,16 +32,11 @@ configuration:
 
 before_build:
   - set CTEST_OUTPUT_ON_FAILURE=1
-  - set ZLIB_VER_DOT=1.2.8
-  - ps: appveyor DownloadFile "https://github.com/madler/zlib/archive/v${env:ZLIB_VER_DOT}.zip" -FileName "zlib.zip"
-  - 7z x zlib.zip
-  - ps: Rename-Item -path "zlib-${env:ZLIB_VER_DOT}" -newName "zlib"
+  - git clone https://github.com/madler/zlib
   - cd zlib
-  - ps: (Get-Content win32/Makefile.msc).replace('-MD', '-MT') | Set-Content win32/Makefile.msc
-  - nmake -f win32/Makefile.msc zlib.lib
-  - copy zlib.lib ..
+  - cmake --build . --target install -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
   - cd ..
-  - cmake.exe -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
+  - cmake -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
 
 build_script:
   - cmake --build . --config %CONFIGURATION%
