--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,19 +37,19 @@ before_build:
   - cd zlib
   - cmake .
   - cmake --build .
-  - cmake --target install
+  - cmake --target INSTALL
   - cd ..
   - git clone https://github.com/osrf/bzip2_cmake
   - cd bzip2_cmake
   - cmake .
   - cmake --build .
-  - cmake --target install
+  - cmake --target INSTALL
   - cd ..
   - git clone https://github.com/lloyd/easylzma
   - cd easylzma
   - cmake .
   - cmake --build .
-  - cmake --target install
+  - cmake --target INSTALL
   - cd ..
   - cmake -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
 
