--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,20 +36,17 @@ before_build:
   - git clone https://github.com/madler/zlib
   - cd zlib
   - cmake .
-  - cmake --build .
-  - cmake --target INSTALL
+  - cmake --build . --target INSTALL
   - cd ..
   - git clone https://github.com/osrf/bzip2_cmake
   - cd bzip2_cmake
   - cmake .
-  - cmake --build .
-  - cmake --target INSTALL
+  - cmake --build . --target INSTALL
   - cd ..
   - git clone https://github.com/lloyd/easylzma
   - cd easylzma
   - cmake .
-  - cmake --build .
-  - cmake --target INSTALL
+  - cmake --build . --target INSTALL
   - cd ..
   - cmake -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
 
