--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ before_build:
   - set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%.
   - git clone https://github.com/katahiromz/zlib
   - cd zlib
-  - cmake .
+  - cmake -DCMAKE_BUILD_TYPE=Release .
   - cmake --build . --target INSTALL
   - set PATH=%PATH%;C:/Program Files/zlib/bin;C:/Program Files (x86)/zlib/bin/
   - set INCLUDE=%INCLUDE%;C:/Program Files/zlib/include;C:/Program Files (x86)/zlib/include
@@ -43,7 +43,7 @@ before_build:
   - cd ..
   - git clone https://github.com/katahiromz/bzip2_cmake
   - cd bzip2_cmake
-  - cmake .
+  - cmake -DCMAKE_BUILD_TYPE=Release .
   - cmake --build . --target INSTALL
   - set INCLUDE=%INCLUDE%;C:/Program Files/bzip2/include;C:/Program Files (x86)/bzip2/include
   - set LIB=%LIB%;C:/Program Files/bzip2/lib;C:/Program Files (x86)/bzip2/lib
@@ -51,7 +51,7 @@ before_build:
   - cd ..
   - git clone https://github.com/katahiromz/xz
   - cd xz
-  - cmake .
+  - cmake -DCMAKE_BUILD_TYPE=Release .
   - cmake --build . --target INSTALL
   - set INCLUDE=%INCLUDE%;C:/Program Files/xz/include;C:/Program Files (x86)/xz/include
   - set LIB=%LIB%;C:/Program Files/xz/lib;C:/Program Files (x86)/xz/lib
