--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ if (ZLIB_FOUND)
 else()
     message(STATUS "ZLIB not found.")
 endif()
-option(USE_DLL_ZLIB "Use DLL ZLIB", OFF)
+option(USE_DLL_ZLIB "Use DLL ZLIB" OFF)
 if (USE_DLL_ZLIB)
     add_definitions(-DZLIB_DLL)  # dynamic
 endif()
@@ -95,7 +95,7 @@ if (LIBLZMA_FOUND)
 else()
     message(STATUS "LZMA not found.")
 endif()
-option(USE_STATIC_LZMA "Use static LZMA", ON)
+option(USE_STATIC_LZMA "Use static LZMA" ON)
 if (USE_STATIC_LZMA)
     add_definitions(-DLZMA_API_STATIC)  # static
 endif()
