--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,6 @@ environment:
       GENERATOR: "Visual Studio 14 2015 Win64"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
 configuration:
-  - Debug
   - Release
 
 before_build:
@@ -35,7 +34,7 @@ before_build:
   - set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%.
   - git clone https://github.com/katahiromz/zlib
   - cd zlib
-  - cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_GENERATOR_PLATFORM=%PLATFORM% .
+  - cmake -DCMAKE_GENERATOR_PLATFORM=%PLATFORM% .
   - cmake --build . --target INSTALL --config Release
   - set PATH=%PATH%;C:/Program Files/zlib/bin;C:/Program Files (x86)/zlib/bin
   - set INCLUDE=%INCLUDE%;C:/Program Files/zlib/include;C:/Program Files (x86)/zlib/include
@@ -43,7 +42,7 @@ before_build:
   - cd ..
   - git clone https://github.com/katahiromz/bzip2_cmake
   - cd bzip2_cmake
-  - cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_GENERATOR_PLATFORM=%PLATFORM% .
+  - cmake -DCMAKE_GENERATOR_PLATFORM=%PLATFORM% .
   - cmake --build . --target INSTALL --config Release
   - set INCLUDE=%INCLUDE%;C:/Program Files/bzip2/include;C:/Program Files (x86)/bzip2/include
   - set LIB=%LIB%;C:/Program Files/bzip2/lib;C:/Program Files (x86)/bzip2/lib
@@ -51,7 +50,7 @@ before_build:
   - cd ..
   - git clone https://github.com/katahiromz/xz
   - cd xz
-  - cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_GENERATOR_PLATFORM=%PLATFORM% .
+  - cmake -DCMAKE_GENERATOR_PLATFORM=%PLATFORM% .
   - cmake --build . --target INSTALL --config Release
   - set INCLUDE=%INCLUDE%;C:/Program Files/xz/include;C:/Program Files (x86)/xz/include
   - set LIB=%LIB%;C:/Program Files/xz/lib;C:/Program Files (x86)/xz/lib
