--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,6 +30,7 @@ configuration:
   - Release
 
 before_build:
+  - cmake --version
   - set CTEST_OUTPUT_ON_FAILURE=1
   - set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%.
   - git clone https://github.com/katahiromz/zlib
