--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,8 +31,19 @@ configuration:
 
 before_build:
   - cmake --version
+
+  # Set Targets path so that gitlink works correctly
+  - ps: $env:MSBUILDDIR=((Get-Command msbuild.exe).Path | Split-Path -parent)
+  - ps: >-
+      if ($env:MSVC_VER -eq 15) {
+          $env:VCTargetsPath="$env:MSBUILDDIR\..\..\..\Common7\IDE\VC\VCTargets"
+      } else {
+          $env:VCTargetsPath="$env:MSBUILDDIR\..\..\..\Microsoft.Cpp\v4.0\V${env:MSVC_VER}0"
+      }
+
   - set CTEST_OUTPUT_ON_FAILURE=1
   - set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%.
+
   - git clone https://github.com/katahiromz/zlib
   - cd zlib
   - cmake -DCMAKE_GENERATOR_PLATFORM=%PLATFORM% .
@@ -41,6 +52,7 @@ before_build:
   - set INCLUDE=%INCLUDE%;C:/Program Files/zlib/include;C:/Program Files (x86)/zlib/include
   - set LIB=%LIB%;C:/Program Files/zlib/lib;C:/Program Files (x86)/zlib/lib
   - cd ..
+
   - git clone https://github.com/katahiromz/bzip2_cmake
   - cd bzip2_cmake
   - cmake -DCMAKE_GENERATOR_PLATFORM=%PLATFORM% .
@@ -49,6 +61,7 @@ before_build:
   - set LIB=%LIB%;C:/Program Files/bzip2/lib;C:/Program Files (x86)/bzip2/lib
   - set CMAKE_PREFIX_PATH=%CMAKE_PREFIX_PATH%;C:/Program Files/bzip2/share/bzip2/cmake;C:/Program Files (x86)/bzip2/share/bzip2/cmake
   - cd ..
+
   - git clone https://github.com/katahiromz/xz
   - cd xz
   - cmake -DCMAKE_GENERATOR_PLATFORM=%PLATFORM% .
@@ -57,6 +70,7 @@ before_build:
   - set LIB=%LIB%;C:/Program Files/xz/lib;C:/Program Files (x86)/xz/lib
   - set CMAKE_PREFIX_PATH=%CMAKE_PREFIX_PATH%;C:/Program Files/xz/lib/cmake/xz;C:/Program Files (x86)/xz/lib/cmake/xz
   - cd ..
+
   - cmake -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
 
 build_script:
