--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,4 @@
 image: Visual Studio 2017
-build: off
 platform: 
   x64
 skip_commits:
@@ -39,6 +38,7 @@ before_build:
 
   - set CTEST_OUTPUT_ON_FAILURE=1
   - set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%.
+  - set VisualStudioVersion=12.0
 
   - git clone https://github.com/katahiromz/zlib
   - cd zlib
