--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ skip_commits:
     - '*.md'
     - '.gitignore'
     - '.travis.yml'
-cache:
+cache: c:\tools\vcpkg\installed\
 matrix:
   fast_finish: true
 environment:
@@ -33,25 +33,40 @@ environment:
       MSVC_VER: 14
 configuration:
   - Release
-
+install:
+  - cd C:\tools\vcpkg
+  - git pull
+  - .\bootstrap-vcpkg.bat
+  - cd %APPVEYOR_BUILD_FOLDER%
 before_build:
   - cmake --version
 
   - set CTEST_OUTPUT_ON_FAILURE=1
   - set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%.
-  - set VisualStudioVersion=12.0
 
-  - if exist zlib rmdir /s /q zlib
+  - if %MSVC_VER%==15 if %PLATFORM%=x86 call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars32.bat"
+  - if %MSVC_VER%==15 if %PLATFORM%=x64 call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
+  - if %MSVC_VER%==14 if %PLATFORM%=x86 call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86
+  - if %MSVC_VER%==14 if %PLATFORM%=x64 call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86
+  - if %MSVC_VER%==14 if %PLATFORM%=x64 call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
+
+  - vcpkg install zlib:x86-windows
+  - vcpkg install zlib:x64-windows
+  - vcpkg install bzip2:x86-windows
+  - vcpkg install bzip2:x64-windows
+  - vcpkg install liblzma:x86-windows
+  - vcpkg install liblzma:x64-windows
+  - vcpkg integrate install
+
   - git clone https://github.com/katahiromz/zlib
   - cd zlib
-  - cmake -DCMAKE_BUILD_TYPE=%CONFIGURATION% -DCMAKE_GENERATOR_PLATFORM=%PLATFORM% .
+  - cmake -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% -DCMAKE_GENERATOR_PLATFORM=%PLATFORM% .
   - cmake --build . --target INSTALL --config Release
   - set PATH=%PATH%;C:/Program Files/zlib/bin;C:/Program Files (x86)/zlib/bin
   - set INCLUDE=%INCLUDE%;C:/Program Files/zlib/include;C:/Program Files (x86)/zlib/include
   - set LIB=%LIB%;C:/Program Files/zlib/lib;C:/Program Files (x86)/zlib/lib
   - cd ..
 
-  - if exist bzip2_cmake rmdir /s /q bzip2_cmake
   - git clone https://github.com/katahiromz/bzip2_cmake
   - cd bzip2_cmake
   - cmake -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% -DCMAKE_GENERATOR_PLATFORM=%PLATFORM% .
@@ -61,7 +76,6 @@ before_build:
   - set CMAKE_PREFIX_PATH=%CMAKE_PREFIX_PATH%;C:/Program Files/bzip2/share/bzip2/cmake;C:/Program Files (x86)/bzip2/share/bzip2/cmake
   - cd ..
 
-  - if exist xz rmdir /s /q xz
   - git clone https://github.com/katahiromz/xz
   - cd xz
   - cmake -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% -DCMAKE_GENERATOR_PLATFORM=%PLATFORM% .
@@ -71,7 +85,7 @@ before_build:
   - set CMAKE_PREFIX_PATH=%CMAKE_PREFIX_PATH%;C:/Program Files/xz/lib/cmake/xz;C:/Program Files (x86)/xz/lib/cmake/xz
   - cd ..
 
-  - cmake -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
+  - cmake DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake -G "%GENERATOR%" -DCMAKE_BUILD_TYPE=%CONFIGURATION% %APPVEYOR_BUILD_FOLDER%
 
 build_script:
   - cmake --build . --config %CONFIGURATION%
