--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,11 +44,11 @@ before_build:
   - set CTEST_OUTPUT_ON_FAILURE=1
   - set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%.
 
-  - if %MSVC_VER%==15 if %PLATFORM%=x86 call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars32.bat"
-  - if %MSVC_VER%==15 if %PLATFORM%=x64 call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
-  - if %MSVC_VER%==14 if %PLATFORM%=x86 call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86
-  - if %MSVC_VER%==14 if %PLATFORM%=x64 call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86
-  - if %MSVC_VER%==14 if %PLATFORM%=x64 call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
+  - if %MSVC_VER%==15 if %PLATFORM%==x86 call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars32.bat"
+  - if %MSVC_VER%==15 if %PLATFORM%==x64 call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
+  - if %MSVC_VER%==14 if %PLATFORM%==x86 call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86
+  - if %MSVC_VER%==14 if %PLATFORM%==x64 call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86
+  - if %MSVC_VER%==14 if %PLATFORM%==x64 call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
 
   - vcpkg install zlib:x86-windows
   - vcpkg install zlib:x64-windows
