--- a/appveyor.yml
+++ b/appveyor.yml
@@ -50,12 +50,12 @@ before_build:
   - if %MSVC_VER%==14 if %PLATFORM%==x64 call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86
   - if %MSVC_VER%==14 if %PLATFORM%==x64 call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
 
-  - vcpkg install zlib:x86-windows
-  - vcpkg install zlib:x64-windows
-  - vcpkg install bzip2:x86-windows
-  - vcpkg install bzip2:x64-windows
-  - vcpkg install liblzma:x86-windows
-  - vcpkg install liblzma:x64-windows
+  - if %PLATFORM%==x86 vcpkg install zlib:x86-windows
+  - if %PLATFORM%==x64 vcpkg install zlib:x64-windows
+  - if %PLATFORM%==x86 vcpkg install bzip2:x86-windows
+  - if %PLATFORM%==x64 vcpkg install bzip2:x64-windows
+  - if %PLATFORM%==x86 vcpkg install liblzma:x86-windows
+  - if %PLATFORM%==x64 vcpkg install liblzma:x64-windows
   - vcpkg integrate install
 
   - git clone https://github.com/katahiromz/zlib
