shrink appveyor.yml scale

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,16 +11,16 @@ matrix:
   fast_finish: true
 environment:
   matrix:
-    - PLATFORM: x86
-      BUILDER: CMake
-      GENERATOR: "Visual Studio 15 2017"
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      MSVC_VER: 15
-    - PLATFORM: x64
-      BUILDER: CMake
-      GENERATOR: "Visual Studio 15 2017 Win64"
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      MSVC_VER: 15
+    #- PLATFORM: x86
+    #  BUILDER: CMake
+    #  GENERATOR: "Visual Studio 15 2017"
+    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    #  MSVC_VER: 15
+    #- PLATFORM: x64
+    #  BUILDER: CMake
+    #  GENERATOR: "Visual Studio 15 2017 Win64"
+    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    #  MSVC_VER: 15
     - PLATFORM: x86
       BUILDER: CMake
       GENERATOR: "Visual Studio 14 2015"
@@ -32,7 +32,7 @@ environment:
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       MSVC_VER: 14
 configuration:
-  - Debug
+  #- Debug
   - Release
 install:
   - cd C:\tools\vcpkg
