--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ if (WIN32)
         # using GCC
         set(CMAKE_C_FLAGS "-static -static-libgcc -static-libstdc++")
         set(CMAKE_CXX_FLAGS "-static -static-libgcc -static-libstdc++")
-    elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    elseif (MSVC)
         # replace "/MD" with "/MT" (building without runtime DLLs)
         set(CompilerFlags
             CMAKE_C_FLAGS
